--- a/index.html
+++ b/index.html
@@ -76,9 +76,6 @@
             <li class="pb2 pb3-ns">
               <a href="" id="" class="js-scroll scroll-to">PDF</a>
             </li>
-            <li class="pb3 pb3-ns">
-              <a href="" id="" class="js-scroll scroll-to">Play game</a>
-            </li>
           </ol>
         </div>
       </div>
@@ -123,8 +120,8 @@
 
         </div>
 
-        <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/self-assessment.gif" alt="Flowers in Chania">
+        <div class="sm-col-6 flex items-center justify-center">
+          <img src="/assets/images/CheckIn.svg" alt="Flowers in Chania">
         </div>
 
       </div>
@@ -211,7 +208,7 @@
         </div>
 
         <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/hand_-14-(1).png" alt="">
+          <img src="/assets/images/idoarrtimage.svg" alt="">
         </div>
 
       </div>
@@ -1688,7 +1685,7 @@
         </div>
 
         <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/hand_-14-(1).png" alt="">
+          <img src="/assets/images/appreciationtrain.gif" alt="">
         </div>
 
       </div>
@@ -1779,7 +1776,7 @@
         </div>
 
         <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/hand_-14-(1).png" alt="">
+          <img src="/assets/images/mingle.gif" alt="">
         </div>
 
       </div>
@@ -1870,7 +1867,7 @@
         </div>
 
         <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/hand_-14-(1).png" alt="">
+          <img src="/assets/images/impression.gif" alt="">
         </div>
 
       </div>
@@ -1958,7 +1955,7 @@
         </div>
 
         <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/hand_-14-(1).png" alt="">
+          <img src="/assets/images/principlesoffeedback.gif" alt="">
         </div>
 
       </div>
@@ -2052,7 +2049,7 @@
         </div>
 
         <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/hand_-14-(1).png" alt="">
+          <img src="/assets/images/Purpose.svg" alt="">
         </div>
 
       </div>
@@ -2150,7 +2147,7 @@
         </div>
 
         <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/hand_-14-(1).png" alt="">
+          <img src="/assets/images/checkout-image.svg" alt="">
         </div>
 
       </div>
