fix steps margin

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
     <section class="parallax">
       <div
-        class="theme f1 f-headline-ns rubik flex justify-center  vh-75 flex items-center justify-center bg-avocado-mist white"
+        class="theme f1 f-headline-ns rubik flex justify-center  vh-75 flex items-center justify-center bg-pink-lemonade white"
         id="purpose">
         Purpose
       </div>
@@ -215,7 +215,7 @@
 
 
 
-      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button"
+      <div class="button steps-button flex flex-row items-center justify-between pa2 mt-ns" id="steps-button"
         data-id="idoarrt">
         <div class="steps-description">
           Steps
@@ -231,7 +231,7 @@
         </div>
       </div>
 
-      <div class="display-none steps flex flex-wrap justify-between flex-row-ns pv3 pv5-ns steps-text"
+      <div class="display-none steps flex flex-wrap justify-between flex-row-ns pv3 pv5-ns mt2 mt0-ns steps-text"
         data-text="idoarrt">
 
 
@@ -309,7 +309,7 @@
 
 
     <div
-      class="theme f1 f-headline-ns rubik flex justify-center  vh-75 flex items-center justify-center black-text bg-sunrise"
+      class="theme f1 f-headline-ns rubik flex justify-center  vh-75 flex items-center justify-center white-text bg-avocado-mist"
       id="team">
       Team
     </div>
@@ -341,7 +341,7 @@
 
       </div>
 
-      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button"
+      <div class="button steps-button flex flex-row items-center justify-between pa2 mt2 mt0-ns" id="steps-button"
         data-id="selfassessment">
         <div class="steps-description">
           Steps
@@ -438,7 +438,7 @@
 
     </section>
 
-
+  
 
     <!--Who what when-->
     <section class="who-what-when ph3 pv5 pa5-ns bg-white" id="who-what-when">
@@ -1408,7 +1408,7 @@
 
 
     <div
-      class="theme f1 f-headline-ns rubik flex justify-center  vh-75 flex items-center justify-center bg-fire-brick white"
+      class="theme f1 f-headline-ns rubik flex justify-center  vh-75 flex items-center justify-center bg-ocean white"
       id="feedback">
       Feedback
     </div>
@@ -2112,7 +2112,7 @@
 
 
     <div
-      class="theme f1 f-headline-ns rubik flex justify-center  vh-75 flex items-center justify-center bg-sunrise black section-animation"
+      class="theme f1 f-headline-ns rubik flex justify-center  vh-75 flex items-center justify-center bg-frank-ocean black section-animation"
       id="checkout">
       <div class="z-index animation-title">Check-out</div>
       <span class="shape circle"></span>
