Add padding and margins for steps

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             IDOARRT
           </div>
           <div class="f3-ns rubik pb2 pb2-ns">How IDOARRT works</div>
-          <div class="measure pb4 pb4-ns">
+          <div class="measure">
             Purpose: Check-in and check-out processes are fundamental to the work we engage in, and set the context for
             what we actually do. The shaping of questions in a thoughtful, purposeful and intentional manner increases
             the
@@ -215,7 +215,7 @@
 
 
 
-      <div class="button steps-button flex flex-row items-center justify-between pa2 mt-ns" id="steps-button"
+      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4 mt0-ns" id="steps-button"
         data-id="idoarrt">
         <div class="steps-description">
           Steps
@@ -322,7 +322,7 @@
             Self-assessment
           </div>
           <div class="f3-ns rubik pb2 pb2-ns">How team self-assessment works</div>
-          <div class="measure pb3-ns">
+          <div class="measure">
             This workshop is an essential starting point for any team that wants to refresh itself and evolve the way it
             works. <br><br>
             Most teams work and grow organically, with little deliberate attention given to designing the working
@@ -341,7 +341,7 @@
 
       </div>
 
-      <div class="button steps-button flex flex-row items-center justify-between pa2 mt2 mt0-ns" id="steps-button"
+      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4 mt0-ns" id="steps-button"
         data-id="selfassessment">
         <div class="steps-description">
           Steps
@@ -464,7 +464,7 @@
         </div>
 
       </div>
-      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button"
+      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4 mt0-ns" id="steps-button"
         data-id="whowhatwhen">
         <div class="steps-description">
           Steps
@@ -541,7 +541,7 @@
             Stinky fish
           </div>
           <div class="f3-ns rubik pb2 pb2-ns">How stinky fish works</div>
-          <div class="measure pb3-ns">
+          <div class="measure">
             Early in a program, focused on sharing fears, anxieties and uncertainties related to the program theme. The
             purpose is to create openness within a group. <br><br>
             The stinky fish is a metaphor for "that thing that you carry around but don’t like to talk about; but the
@@ -558,7 +558,7 @@
 
       </div>
 
-      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button"
+      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4 mt0-ns" id="steps-button"
         data-id="stinkyfish">
         <div class="steps-description">
           Steps
@@ -629,7 +629,7 @@
             Campfire
           </div>
           <div class="f3-ns rubik pb2 pb2-ns">How campfire works</div>
-          <div class="measure pb3-ns">
+          <div class="measure">
             People spend hours sitting in training sessions, sifting through orientation manuals, and playing corporate
             e-learning games to learn the know-how for their new positions.
             But the reality is that the bulk of employee knowledge is gained through social experience. <br><br>
@@ -648,7 +648,7 @@
 
       </div>
 
-      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button"
+      <div class="button steps-button flex flex-row items-center justify-between pa2  mt4 mt4-ns" id="steps-button"
         data-id="campfire">
         <div class="steps-description">
           Steps
@@ -794,7 +794,7 @@
 
       </div>
 
-      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button"
+      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4 mt0-ns" id="steps-button"
         data-id="mappingofculture">
         <div class="steps-description">
           Steps
@@ -908,7 +908,7 @@
       </div>
 
 
-      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button"
+      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4 mt0-ns" id="steps-button"
         data-id="crazy8">
         <div class="steps-description">
           Steps
@@ -996,7 +996,7 @@
 
       </div>
 
-      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button"
+      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4 mt0-ns" id="steps-button"
         data-id="mashup">
         <div class="steps-description">
           Steps
@@ -1083,7 +1083,7 @@
 
       </div>
 
-      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button"
+      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4 mt0-ns" id="steps-button"
         data-id="dotmocracy">
         <div class="steps-description">
           Steps
@@ -1164,7 +1164,7 @@
         </div>
 
       </div>
-      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button"
+      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4 mt0-ns" id="steps-button"
         data-id="speeddating">
         <div class="steps-description">
           Steps
@@ -1251,7 +1251,7 @@
 
       </div>
 
-      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button"
+      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4 mt0-ns" id="steps-button"
         data-id="braindump">
         <div class="steps-description">
           Steps
@@ -1344,7 +1344,7 @@
 
       </div>
 
-      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button"
+      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4 mt0-ns" id="steps-button"
         data-id="howmightwe">
         <div class="steps-description">
           Steps
@@ -1436,7 +1436,7 @@
 
       </div>
 
-      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button"
+      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4 mt0-ns" id="steps-button"
         data-id="flyonthewall">
         <div class="steps-description">
           Steps
@@ -1519,7 +1519,7 @@
 
       </div>
 
-      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button"
+      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4 mt0-ns" id="steps-button"
         data-id="startstopcontinue">
         <div class="steps-description">
           Steps
@@ -1604,7 +1604,7 @@
 
       </div>
 
-      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button"
+      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4 mt0-ns" id="steps-button"
         data-id="twowishesandastar">
         <div class="steps-description">
           Steps
@@ -1690,7 +1690,7 @@
 
       </div>
 
-      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button"
+      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4 mt0-ns" id="steps-button"
         data-id="appreciationtrain">
         <div class="steps-description">
           Steps
@@ -1781,7 +1781,7 @@
 
       </div>
 
-      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button"
+      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4 mt0-ns" id="steps-button"
         data-id="appreciationmingle">
         <div class="steps-description">
           Steps
@@ -1872,7 +1872,7 @@
 
       </div>
 
-      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button"
+      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4 mt0-ns" id="steps-button"
         data-id="strongestimpression">
         <div class="steps-description">
           Steps
@@ -1960,7 +1960,7 @@
 
       </div>
 
-      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button"
+      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4 mt0-ns" id="steps-button"
         data-id="principlesoffeedback">
         <div class="steps-description">
           Steps
@@ -2028,7 +2028,7 @@
 
 
 
-    <!--CHECOUT-->
+    <!--Reflection-->
     <div
       class="theme f1 f-headline-ns rubik flex justify-center  vh-75 flex items-center justify-center bg-avocado-mist white"
       id="reflection">
@@ -2054,7 +2054,7 @@
 
       </div>
 
-      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4-ns" id="steps-button"
+      <div class="button steps-button flex flex-row items-center justify-between pa2 mt4 mt0-ns" id="steps-button"
         data-id="checkout">
         <div class="steps-description">
           Steps
@@ -2112,7 +2112,7 @@
 
 
     <div
-      class="theme f1 f-headline-ns rubik flex justify-center  vh-75 flex items-center justify-center bg-frank-ocean black section-animation"
+      class="theme f1 f-headline-ns rubik flex justify-center  vh-75 flex items-center justify-center bg-frank-ocean white-text section-animation"
       id="checkout">
       <div class="z-index animation-title">Check-out</div>
       <span class="shape circle"></span>
