add padding to table of contents

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
     <section>
-      <div class="f-headline-ns f1 tc-ns justify-center-ns rubik flex ph3 pt5-ns pv3 pt0-ns lh-title tc">
+      <div class="f-headline-ns f2 tc-ns justify-center-ns rubik flex ph3 pt5-ns pv4 pv3 pt0-ns lh-title tc">
         SRF Werkzeugkiste
       </div>
     </section>
@@ -45,7 +45,7 @@
             </div>
           </div>
         </div>
-        <div class="sm-col-6 flex flex-column items-left justify-center bg-white pa2 pa4-ns table-of-contents">
+        <div class="sm-col-6 flex flex-column items-left justify-center bg-white pa3 pa4-ns table-of-contents">
           <div class="f3-ns pb2 bold-font rubik">
             Table of contents
           </div>
@@ -437,6 +437,7 @@
       </div>
 
     </section>
+
 
   
 
