--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </div>
           <ol class="">
             <li class="pb2 pb3-ns">
-              <a href="" id="" class="js-scroll scroll-to">PDF</a>
+              <a href="/assets/images/Print_The_GameSRF_Werkzeugkiste.pdf" id="" class="js-scroll scroll-to">PDF</a>
             </li>
           </ol>
         </div>
