--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </div>
           <ol class="">
             <li class="pb2 pb3-ns">
-              <a href="/assets/images/Print_The_GameSRF_Werkzeugkiste.pdf" id="" class="js-scroll scroll-to">PDF</a>
+              <a href="https://drive.google.com/file/d/16eqn_phvtn1CpJe8BTEb6WBUS4IqOCvP/view?usp=sharing"  target="_blank" id="" class="js-scroll scroll-to">PDF</a>
             </li>
           </ol>
         </div>
