--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
           </div>
         </div>
-        <div class="sm-col-6 flex flex-column items-left justify-center bg-white pa3 pa4-ns table-of-contents">
+        <div class="sm-col-6 flex flex-column items-left justify-center bg-white pa3 pa4-ns table-of-contents box-shadow">
           <div class="f3-ns pb2 bold-font rubik">
             Table of contents
           </div>
@@ -74,7 +74,7 @@
           </div>
           <ol class="">
             <li class="pb2 pb3-ns">
-              <a href="https://drive.google.com/file/d/16eqn_phvtn1CpJe8BTEb6WBUS4IqOCvP/view?usp=sharing"  target="_blank" id="" class="js-scroll scroll-to">PDF</a>
+              <a href="https://drive.google.com/file/d/16eqn_phvtn1CpJe8BTEb6WBUS4IqOCvP/view?usp=sharing"  target="_blank" id="" class=" scroll-to">PDF</a>
             </li>
           </ol>
         </div>
@@ -121,7 +121,7 @@
         </div>
 
         <div class="sm-col-6 flex items-center justify-center">
-          <img src="/assets/images/CheckIn.svg" alt="Flowers in Chania">
+          <img src="/assets/images/CheckIn.svg" alt="emoji">
         </div>
 
       </div>
@@ -2031,7 +2031,7 @@
 
     <!--Reflection-->
     <div
-      class="theme f1 f-headline-ns rubik flex justify-center  vh-75 flex items-center justify-center bg-avocado-mist white"
+      class="theme f1 f-headline-ns rubik flex justify-center  vh-75 flex items-center justify-center bg-almost-lavender white"
       id="reflection">
       Reflection
     </div>
@@ -2050,7 +2050,7 @@
         </div>
 
         <div class="sm-col-6 flex items-start justify-center">
-          <img src="/assets/images/Purpose.svg" alt="">
+          <img src="/assets/images/reflection.svg" alt="">
         </div>
 
       </div>
