--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 
 
-    <section>
+    <section class="logo">
       <div class="f-headline-ns f2 tc-ns justify-center-ns rubik flex ph3 pt5-ns pv4 pv3 pt0-ns lh-title tc">
         SRF Werkzeugkiste
       </div>
@@ -35,7 +35,7 @@
     <section class="ph3 pb5  pa5-ns flex items-center" id="">
       <div class="flex flex-column flex-row-ns">
         <div class="f1-ns rubik lh-title-ns sm-col-6 flex items-start justify-center pr4-ns pb4">
-          <div class="flex flex-column">
+          <div class="flex flex-column fade-in">
             <div class="pb4">
               This is a toolbox for anyone who wants to do things more creatively and collaboratively in their team or
             organization.
@@ -45,7 +45,7 @@
             </div>
           </div>
         </div>
-        <div class="sm-col-6 flex flex-column items-left justify-center bg-white pa3 pa4-ns table-of-contents box-shadow">
+        <div class="sm-col-6 flex flex-column items-left justify-center bg-white pa3 pa4-ns table-of-contents box-shadow table-of-contents">
           <div class="f3-ns pb2 bold-font rubik">
             Table of contents
           </div>
