fix hero animation

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section class="ph3 pb5  pa5-ns flex items-center" id="">
       <div class="flex flex-column flex-row-ns">
         <div class="f1-ns rubik lh-title-ns sm-col-6 flex items-start justify-center pr4-ns pb4">
-          <div class="flex flex-column fade-in">
+          <div class="flex flex-column fade-in-animation">
             <div class="pb4">
               This is a toolbox for anyone who wants to do things more creatively and collaboratively in their team or
             organization.
