add animation fade

--- a/index.html
+++ b/index.html
@@ -34,15 +34,20 @@
 
       
 
-      <section class="logo z-high">
+      <!-- <section class="logo z-high">
         <div class="f-headline-ns f2 tc-ns justify-center-ns rubik flex ph3 pt5-ns pv4 pv3 pt0-ns lh-title tc">
           SRF Werkzeugkiste
         </div>
-      </section>
+      </section> -->
   
-      <section class="ph3 pb5  pa5-ns flex items-center " id="">
+      <section class="ph3 pb5  pa5-ns items-center hero-page" id="">
+        <div class="sm-col-12 flex-column">
+          <div class="f-headline-ns f2 tc-ns justify-center-ns rubik flex ph3 pv4 pt0-ns lh-title tc">
+            SRF Werkzeugkiste
+          </div>
+        </div>
         <div class="flex flex-column flex-row-ns">
-          <div class="f1-ns rubik lh-title-ns sm-col-6 flex items-start justify-center pr4-ns pb4">
+          <div class="f1-ns rubik lh-title-ns sm-col-6 flex items-start justify-center pr4-ns pb4 display-none-small">
             <div class="flex flex-column fade-in-animation">
               <div class="pb4">
                 This toolbox makes you think, innovate and collaborate and that's just the beginning.
