--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="description" content="description here">
     <meta name="keywords" content="keywords,here">
     <title>SRF</title>
+    <link rel="icon" href="/assets/images/favicon.png" type="image/gif" sizes="16x16">
     <link href="https://fonts.googleapis.com/css2?family=Karla&family=Rubik:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css" />
     <link rel="stylesheet" type="text/css" href="/assets/css/base.css" />
