--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 This toolbox makes you think, innovate and collaborate and that's just the beginning.
               </div>
               <div class="play-game-button check-in-question pb2 f6">
-                <a href="" class=""><p>Play game</p></a>
+                <a href="https://tabletopia.com/playground/srf-toolbox-4bje8b/play-now" target="_blank" class=""><p>Play game</p></a>
               </div>
             </div>
           </div>
