Try adding 'cool'

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             likelihood of them being powerful. It’s a simple way for a team to open or close a process, symbolically and
             in a collaborative way. Checking-in/out invites each member in a group to be present, seen, and heard.
             Checking-in emphasizes presence, focus, and group commitment; checking-out emphasizes reflection and
-            closure.
+            closure. cool
           </div>
 
 
